[package]
name = "nessus_xml_parser"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sciguy16/nessus_xml_parser-rs"
description = "Parse Nessus XML files into Rust datatypes and provide useful iterators"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nessus_xml_parser"
path = "src/lib.rs"

[dependencies]
roxmltree = "0.13"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
